# paper-dl

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
examples/: sample.json
paper_dl/: __init__.py  cli.py  downloader.py
tests/: test_downloader.py
