[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-dl"
version = "0.1.0"
description = "Download arxiv PDFs from pasa search results"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.66",
]
keywords = ["arxiv", "paper", "download", "pasa", "research", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
paper-dl = "paper_dl.cli:main"

[project.urls]
Homepage = "https://github.com/ruizelyu/paper-dl"
Issues = "https://github.com/ruizelyu/paper-dl/issues"

[tool.setuptools.packages.find]
include = ["paper_dl*"]
